Add sponsors page, and small edits

--- a/src/faq/index.html
+++ b/src/faq/index.html
@@ -40,7 +40,10 @@
               </li>
               <li id="media-kit" class="nav-item">
                 <a class="nav-link" href="/downloads/2019-KLRN-Media-Kit.pdf">Media Kit</a>
-              </li>           
+              </li>  
+              <li id="sponsors" class="nav-item">
+                <a class="nav-link" href="/our-sponsors">Our Sponsors</a>
+              </li>                
             </ul>
             <a href="#footer" id="become_sponsor" class="scroll btn btn-primary">Become a Sponsor</a>
           </div>
